--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "mike42/escpos-php": "2.2"
+        "mike42/escpos-php": "2.2",
+        "realrashid/sweet-alert": "^5.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
